<resources>
    <string name="app_name">Phone Finder</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="action_settings">Settings</string>
    <string name="action_add_phone">add phone</string>
    <string name="action_delete_phone">delete phone</string>
    <string name="action_push_logs">push logs</string>
    <string name="action_delete_logs">delete logs</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Preferences -->
    <string name="preferences_header">icons provided by icons8.de</string>

    <string name="preference_title_mqtt_uri">MQTT Server</string>
    <string name="preference_key_mqtt_uri" translatable="false">MqttServerUri</string>
    <string name="preference_title_phone_id">Phone ID</string>
    <string name="preference_key_phone_id" translatable="false">PhoneId</string>
    <string name="preference_title_wlan_ssid">Home WLAN SSID</string>
    <string name="preference_key_wlan_ssid" translatable="false">WlanSSID</string>

    <string name="notification_channel_running_name">Phone Finder service is running</string>
    <string name="notification_channel_running_description">You can now search this phone</string>
    <string name="notification_channel_active_name">Phone is being searched</string>
    <string name="notification_channel_active_description">Phone search has been started</string>

    <string name="notification_running_title">Phone Finder service is running</string>
    <string name="notification_running_text">You can now search this phone</string>
    <string name="notification_active_title">someone is looking for me…</string>
    <string name="notification_active_text">click here if you found me</string>
    <string name="notification_active_action_stop">found you</string>

    <string name="ui_label_phone_id">Phone ID</string>
    <string name="ui_label_mqtt_connection">connected to server</string>
    <string name="ui_label_search_phone">search other phone :</string>
    <string name="ui_value_yes">Yes</string>
    <string name="ui_value_no">No</string>

    <string name="dialog_add_title">Add phone</string>
    <string name="dialog_add_hint">phone to be added</string>

    <string name="dialog_delete_title">Delete phone</string>

</resources>
