<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="hagego.phonefinder.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_phone"
        android:orderInCategory="100"
        android:title="@string/action_add_phone"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_phone"
        android:orderInCategory="100"
        android:title="@string/action_delete_phone"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_push_logs"
        android:orderInCategory="100"
        android:title="@string/action_push_logs"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_logs"
        android:orderInCategory="100"
        android:title="@string/action_delete_logs"
        app:showAsAction="never" />
</menu>
