<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/labelPhoneId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/ui_label_phone_id"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/valuePhoneId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/labelPhoneId"
        app:layout_constraintStart_toStartOf="@+id/valueMqttServerConnection" />

    <TextView
        android:id="@+id/labelMqttServerConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ui_label_mqtt_connection"
        app:layout_constraintStart_toStartOf="@+id/labelPhoneId"
        app:layout_constraintTop_toBottomOf="@+id/labelPhoneId" />

    <TextView
        android:id="@+id/valueMqttServerConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/labelMqttServerConnection"
        app:layout_constraintStart_toEndOf="@+id/labelMqttServerConnection" />

    <TextView
        android:id="@+id/labelSearchPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/ui_label_search_phone"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/labelMqttServerConnection"
        app:layout_constraintTop_toBottomOf="@+id/labelMqttServerConnection" />

    <Spinner
        android:id="@+id/spinnerPhones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/labelSearchPhone"
        app:layout_constraintTop_toBottomOf="@+id/labelSearchPhone" />

</androidx.constraintlayout.widget.ConstraintLayout>